--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,12 @@ input[type="file"] {
 #disclaimer {
     font-size: larger; /* Adjust as needed */
 }
+
+/* Media query for smaller screens */
+@media only screen and (max-width: 768px) {
+    button[type="submit"],
+    input[type="file"] {
+        padding: 15px 25px; /* Adjust as needed */
+        font-size: larger; /* Adjust as needed */
+    }
+}
