--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,20 @@
 /* styles.css */
 
-/* CSS for button size */
-button[type="submit"],
+/* Hide the original file input */
 input[type="file"] {
+    display: none;
+}
+
+/* Style the custom button */
+.file-input-container button {
     padding: 10px 20px; /* Adjust as needed */
     font-size: larger; /* Adjust as needed */
+    cursor: pointer;
 }
 
-/* CSS for disclaimer font size */
-#disclaimer {
-    font-size: larger; /* Adjust as needed */
-}
-
-/* Media query for smaller screens */
+/* Media query for smaller screens if needed */
 @media only screen and (max-width: 768px) {
-    button[type="submit"],
-    input[type="file"] {
+    .file-input-container button {
         padding: 15px 25px; /* Adjust as needed */
         font-size: larger; /* Adjust as needed */
     }
