--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 /* styles.css */
 
+/* CSS for button size */
+button[type="submit"],
+input[type="file"] {
+    padding: 10px 20px; /* Adjust as needed */
+    font-size: larger; /* Adjust as needed */
+}
+
+/* CSS for disclaimer font size */
+#disclaimer {
+    font-size: larger; /* Adjust as needed */
+}
+
 /* Hide the original file input */
 input[type="file"] {
     display: none;
