--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,6 @@ input[type="file"] {
 .input-container label {
     display: inline-block;
     width: 150px; /* Adjust as needed */
-    text-align: right;
+    text-align: left;
     margin-right: 20px; /* Adjust as needed */
 }
